...

    <item
        android:id="@+id/nav_profile"
        android:title="Profile" />

    <item
        android:id="@+id/nav_swap"
        android:title="Swap" />

    <item
        android:id="@+id/nav_messages"
        android:title="Messages" />

...
